// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build > rollup > mixjs getEntries 1`] = `
{
  "app": {
    "deps": [],
    "path": "app.js",
    "type": "app",
  },
  "components": [
    {
      "deps": [],
      "path": "index2.js",
      "type": "component",
    },
  ],
  "pages": [
    {
      "deps": [],
      "path": "index.js",
      "type": "page",
    },
    {
      "deps": [],
      "path": "pages/index.js",
      "type": "page",
    },
  ],
  "subpackages": [],
}
`;

exports[`build > rollup > mixjs runProd > app.js 1`] = `
""use strict";
const cjs = require("./cjs-B3a6j7Rd.js");
const x = cjs.cjs;
console.log(x);
"
`;

exports[`build > rollup > mixjs runProd > cjs-B3a6j7Rd.js 1`] = `
""use strict";
const a = "1";
var cjs = {
  a,
  b: () => {
    return "b";
  }
};
exports.cjs = cjs;
"
`;

exports[`build > rollup > mixjs runProd > esm-CR02SQDf.js 1`] = `
""use strict";
const c = "c";
exports.c = c;
"
`;

exports[`build > rollup > mixjs runProd > index.js 1`] = `
""use strict";
const cjs = require("./cjs-B3a6j7Rd.js");
const esm = require("./esm-CR02SQDf.js");
const a = cjs.cjs;
console.log(a, esm.c);
"
`;

exports[`build > rollup > mixjs runProd > index2.js 1`] = `
""use strict";
const cjs = require("./cjs-B3a6j7Rd.js");
const esm = require("./esm-CR02SQDf.js");
const a = cjs.cjs;
console.log(a, esm.c);
"
`;

exports[`build > rollup > mixjs runProd > pages/index.js 1`] = `
""use strict";
"
`;

exports[`build > rollup > mixjs vite build > app.js 1`] = `
""use strict";
const cjs = require("./cjs-B3a6j7Rd.js");
const x = cjs.cjs;
console.log(x);
"
`;

exports[`build > rollup > mixjs vite build > cjs-B3a6j7Rd.js 1`] = `
""use strict";
const a = "1";
var cjs = {
  a,
  b: () => {
    return "b";
  }
};
exports.cjs = cjs;
"
`;

exports[`build > rollup > mixjs vite build > esm-CR02SQDf.js 1`] = `
""use strict";
const c = "c";
exports.c = c;
"
`;

exports[`build > rollup > mixjs vite build > index.js 1`] = `
""use strict";
const cjs = require("./cjs-B3a6j7Rd.js");
const esm = require("./esm-CR02SQDf.js");
const a = cjs.cjs;
console.log(a, esm.c);
"
`;

exports[`build > rollup > mixjs vite build > index2.js 1`] = `
""use strict";
const cjs = require("./cjs-B3a6j7Rd.js");
const esm = require("./esm-CR02SQDf.js");
const a = cjs.cjs;
console.log(a, esm.c);
"
`;

exports[`build > rollup > mixjs vite build > pages/index.js 1`] = `
""use strict";
"
`;
